[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danpy"
version = "0.1.0"
description = "DAN (Data Advanced Notation) Parser and Encoder for Python"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "DAN Python Library"}
]
keywords = ["dan", "parser", "encoder", "data-format", "configuration", "config"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
project-urls = {Documentation = "https://github.com/yourusername/dan-py#readme", "Issue Tracker" = "https://github.com/yourusername/dan-py/issues", "Source Code" = "https://github.com/yourusername/dan-py"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["dan"]

